fix msg overflow bug

--- a/client/src/components/Message/Message.module.css
+++ b/client/src/components/Message/Message.module.css
@@ -1,24 +1,13 @@
 .container {
-  display: flex;
   padding: 5px 20px;
+  margin-top: 10px;
 }
 
 .container:hover {
   background-color: #222428;
-  cursor: pointer;
-}
-
-.profile {
-  width: 36px;
-  height: 36px;
-  background-color: gray;
-  border-radius: 50%;
-  margin: 15px 12px;
-  pointer-events: none;
 }
 
 .name {
-  display: block;
   margin-top: 10px;
   margin-bottom: 0;
 }
@@ -26,4 +15,5 @@
 .msg {
   padding-top: 0;
   margin: 0;
+  word-wrap: break-word;
 }
