--- a/client/src/pages/RoomPage/RoomPage.module.css
+++ b/client/src/pages/RoomPage/RoomPage.module.css
@@ -9,6 +9,7 @@
   flex-direction: column;
   justify-content: flex-end;
   overflow-y: scroll;
+  position: relative;
 }
 
 .server_title {
@@ -19,7 +20,7 @@
   margin: 15px 20px;
 }
 
-.wrapper {
+.page_container {
   display: flex;
   width: 100%;
 }
@@ -28,4 +29,9 @@
   height: 100%;
   display: flex;
   flex-direction: column;
+}
+
+.msgs_wrapper {
+  position: absolute;
+  width: 100%;
 }
